--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -32,10 +32,6 @@
   <body>
     <header>
       <img src="/assets/logo.svg" alt="" />
-      <details>
-        <summary>English</summary>
-        <a href="/de">Deutsch</a>
-      </details>
       <a href="/docs/intro" class="button primary">Get Started</a>
     </header>
     <main>
@@ -49,9 +45,7 @@
           </p>
           <div class="buttons">
             <a href="/docs/intro" class="button primary">Get Started</a>
-            <a href="https://github.com/axios/axios" class="button"
-              >View on GitHub</a
-            >
+            <a href="https://github.com/axios/axios" class="button">View on GitHub</a>
           </div>
         </div>
         <div class="code-preview">
@@ -59,42 +53,5 @@
         </div>
       </section>
     </main>
-    <footer>
-      <table>
-        <tr>
-          <th>Languages</th>
-          <th>Open Source</th>
-          <th>Contribute</th>
-        </tr>
-        <tr>
-          <td><a href="/">English</a></td>
-          <td><a href="https://github.com/axios/axios">Source on GitHub</a></td>
-          <td><a href="https://github.com/axios/axios">Fork on GitHub</a></td>
-        </tr>
-        <tr>
-          <td><a href="/de">Deutsch</a></td>
-          <td><a href="https://github.com/axios/axios/issues">Issues</a></td>
-          <td><a href="https://github.com/codemaster138/axios-site">Fork the Website</a></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td><a href="https://github.com/axios/axios/pulls">Pull Requests</a></td>
-          <td><a href="https://github.com/axios/axios/issues/new/choose">Create an issue</a></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td><a href="https://github.com/axios/axios/blob/master/CODE_OF_CONDUCT.md">Code of Conduct</a></td>
-          <td></td>
-        </tr>
-      </table>
-      <div class="row">
-        <span class="copyright-notice">This Website: Copyright © 2020-present John Jakob "Jake" Sarjeant. Used by permission.</span>
-        <a href="https://github.com/codemaster138/axios-site">View this site on GitHub</a>
-      </div>
-      <div class="row">
-        <span class="copyright-notice">The Axios Project: Copyright © 2014-present Matt Zabriskie.</span>
-        <span>Licensed under the <b><a href="https://opensource.org/licenses/MIT">MIT License</a></b></span>
-      </div>
-    </footer>
   </body>
 </html>
