--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | <%= posts.config.blogName %></title>
-    <link rel="stylesheet" href="/assets/style/index.css" />
+    <link rel="stylesheet" href="/assets/index.css" />
     <link
       rel="preload"
       as="style"
