--- a/assets/index.css
+++ b/assets/index.css
@@ -11,6 +11,7 @@ header h2 {
   font-weight: 500;
   font-size: 24px;
   color: #000;
+  margin: 0;
 }
 
 main {
@@ -24,4 +25,5 @@ main {
 main h1 {
   font-size: 36px;
   font-weight: 700;
+  margin: 0.5em;
 }
