--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -34,8 +34,10 @@
       <h2><%= posts.config.ownerName %></h1>
     </header>
     <main>
-      <h1><%= posts[0].attributes.title %></h1>
-      <img id="cover-0" src="<%=posts[0].attributes.cover%>" alt=""/>
+      <a id="hero-post">
+        <h1><%= posts[0].attributes.title %></h1>
+        <img id="cover-0" src="<%=posts[0].attributes.cover%>" alt=""/>
+      </a>
     </main>
   </body>
 </html>
