--- a/assets/index.css
+++ b/assets/index.css
@@ -22,8 +22,20 @@ main {
   font-family: 'DM Sans', 'Roboto', 'DM Mono', sans-serif;
 }
 
-main h1 {
+main a#hero-post {
+  width: 100%;
+  display: block;
+  text-decoration: none;
+  color: #000;
+}
+
+main a#hero-post h1 {
   font-size: 48px;
   font-weight: 700;
-  margin: 0;
+}
+
+main a#hero-post img {
+  width: 100%;
+  height: auto;
+  margin: 20px 0;
 }
