--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -34,7 +34,7 @@
       <h2><%= posts.config.ownerName %></h1>
     </header>
     <main>
-      <a id="hero-post">
+      <a id="hero-post" href="/<%= post.path %>">
         <h1><%= posts[0].attributes.title %></h1>
         <img id="cover-0" src="<%=posts[0].attributes.cover%>" alt=""/>
       </a>
