--- a/docs/assets/index.css
+++ b/docs/assets/index.css
@@ -64,7 +64,13 @@ main a#hero-post img {
   margin: 20px 0;
 }
 
-@media screen and (min-width: 950px) {
+@media screen
+  and (min-width: 950px)
+  or (
+    (min-device-width: 950px)
+    and
+    (orientation: landscape)
+  ){
   main a#hero-post .f div {
     width: calc(50% - 30px);
   }
