--- a/assets/index.css
+++ b/assets/index.css
@@ -38,7 +38,7 @@ main a#hero-post {
 main a#hero-post div.f {
   width: 100%;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   flex-flow: row wrap;
 }
