--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -51,6 +51,9 @@
           <p><%= posts[0].attributes.description %></p>
         </div>
       </a>
+      <div class="more-stories">
+        <h1>More Stories</h1>
+      </div>
     </main>
   </body>
 </html>
