--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -51,8 +51,8 @@
           <p><%= posts[0].attributes.description %></p>
         </div>
       </a>
-      <div class="more-stories">
-        <h1>More Stories</h1>
+      <div class="more">
+        <h1 id="more-stories">More Stories</h1>
       </div>
     </main>
   </body>
