--- a/assets/index.css
+++ b/assets/index.css
@@ -64,6 +64,15 @@ main a#hero-post img {
   margin: 20px 0;
 }
 
+main .more {
+  margin-top: 100px;
+}
+
+main .more h1#more-stories {
+  font-size: 55px;
+  margin: 0;
+}
+
 @media screen and (min-width: 950px) {
   main a#hero-post .f div {
     width: calc(50% - 20px);
