--- a/assets/index.css
+++ b/assets/index.css
@@ -51,11 +51,16 @@ main a#hero-post h1 {
   font-size: 48px;
   font-weight: 700;
   margin-bottom: 0px;
+  margin-top: 48px;
 }
 
 main a#hero-post time {
   font-size: 18px;
   margin: 0px;
+}
+
+main a#hero-post p {
+  margin-top: 48px;
 }
 
 main a#hero-post img {
@@ -69,7 +74,7 @@ main .more {
 }
 
 main .more h1#more-stories {
-  font-size: 55px;
+  font-size: clamp(48, 7.5vw, 72px);
   margin: 0;
 }
 
