--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -41,7 +41,7 @@
       <h2><%= posts.config.ownerName %></h1>
     </header>
     <main>
-      <a id="hero-post" href="/<%= post.path %>">
+      <a id="hero-post" href="/<%= posts[0].path %>">
         <img id="cover-0" src="<%=posts[0].attributes.cover%>" alt=""/>
         <div class="f">
           <div>
