--- a/assets/index.css
+++ b/assets/index.css
@@ -79,34 +79,34 @@ main .more h1#more-stories {
   margin: 0;
 }
 
-main .more .more-list {
+main .more #more-list {
   width: 100%;
   display: grid;
   grid-gap: 40px;
   grid-auto-columns: minmax(250px, 1fr);
 }
 
-main .more .more-list a {
+main .more #more-list a {
   color: #000;
   display: block;
   text-decoration: none;
 }
 
-main .more .more-list a img {
+main .more #more-list a img {
   width: 100%;
 }
 
-main .more .more-list a h1 {
+main .more #more-list a h1 {
   font-size: 36px;
   margin: 0;
 }
 
-main .more .more-list a time {
+main .more #more-list a time {
   font-size: 18px;
   margin-bottom: 10px;
 }
 
-main .more .more-list a p {
+main .more #more-list a p {
   margin: 0;
   font-size: 18px;
 }
