--- a/assets/index.css
+++ b/assets/index.css
@@ -83,7 +83,7 @@ main .more #more-list {
   width: 100%;
   display: grid;
   grid-gap: 40px;
-  grid-auto-columns: minmax(250px, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
 
 main .more #more-list a {
