--- a/assets/index.css
+++ b/assets/index.css
@@ -83,7 +83,7 @@ main .more #more-list {
   width: 100%;
   display: grid;
   grid-gap: 40px;
-  grid-template-columns: repeat(2, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 main .more #more-list a {
