--- a/templates/post.ejs
+++ b/templates/post.ejs
@@ -20,17 +20,7 @@
 
 <body>
     <header>
-        <div></div>
-        <div class="left">
-            <button id="hamburger">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
-                    id="hamburgerIcon">
-                    <path d="M3 8V6H21V8H3Z" fill="currentColor" />
-                    <path d="M3 13H21V11H3V13Z" fill="currentColor" />
-                    <path d="M3 18H21V16H3V18Z" fill="currentColor" />
-                </svg>
-            </button>
-        </div>
+        <a href="/">Jake Sarjeant</a>
     </header>
     <main>
         <div class="body">
@@ -41,35 +31,9 @@
                 <%= post.attributes.description %>
             </p>
             <%- post.body %>
-            <div class="links">
-                <% if (post.attributes.prev_link) { %>
-                    <a href="<%= post.attributes.prev_link %>" class="next-link">
-                        <span>« Previous</span>
-                        <span class="l">
-                            <%= post.attributes.prev_title %>
-                        </span>
-                    </a>
-                <% } else { %>
-                    <span></span>
-                <% } %>
-                <% if (post.attributes.next_link) { %>
-                    <a href="<%= post.attributes.next_link %>" class="next-link">
-                        <span>Next »</span>
-                        <span class="l">
-                            <%= post.attributes.next_title %>
-                        </span>
-                    </a>
-                <% } %>
-            </div>
         </div>
         <div class="col-right"></div>
     </main>
-
-    <script>
-        document.querySelector('#hamburger').addEventListener('click', (e) => {
-            document.body.classList.toggle('show-aside');
-        });
-    </script>
 </body>
 
 </html>
