--- a/scss/index.scss
+++ b/scss/index.scss
@@ -19,6 +19,19 @@ header {
     }
 }
 
+main {
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+}
+
+div.body {
+    width: min(750px, 100%);
+    font-family: 'DM Sans', sans-serif;
+}
+
 body {
     /* PRISM */
     main code {
