--- a/scss/index.scss
+++ b/scss/index.scss
@@ -36,18 +36,12 @@ div.body {
     }
 }
 
-@media screen
-    and (min-width: 900px)
-    or (
-        (min-device-width: 900px)
-        and
-        (orientation: landscape)
-    ) {
-        div.body {
-            h1.title {
-                font-size: 84px;
-            }
+@media screen and (min-width: 900px) or ((min-device-width: 900px) and (orientation: landscape)) {
+    div.body {
+        h1.title {
+            font-size: 84px;
         }
+    }
 }
 
 body {
