--- a/templates/post.ejs
+++ b/templates/post.ejs
@@ -27,7 +27,7 @@
             <h1 class="title">
                 <%= post.attributes.title %>
             </h1>
-            <img src="<%=post.attributes.cover%>" alt=""/>
+            <img id="cover" src="<%=post.attributes.cover%>" alt=""/>
             <p class="description">
                 <%= post.attributes.description %>
             </p>
