--- a/scss/index.scss
+++ b/scss/index.scss
@@ -33,6 +33,7 @@ div.body {
     
     h1.title {
         font-size: 48px;
+        margin-bottom: 0;
     }
 }
 
@@ -44,7 +45,7 @@ img {
 img#cover {
     width: 100%;
     height: auto;
-    margin-top: 0;
+    margin-top: 70px;
     margin-bottom: 70px;
 }
 
