--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -54,7 +54,7 @@
         </div>
       </a>
       <div class="more">
-        <h1 id="more-stories">More Stories</h1>
+        <h1 id="more">More Stories</h1>
         <div id="more-list">
           <% postsList.slice(1).forEach((post) => { %>
             <a class="post" href="/blog/<%= post.path %>">
