--- a/assets/index.css
+++ b/assets/index.css
@@ -75,9 +75,10 @@ main .more {
   margin-top: 100px;
 }
 
-main .more h1#more-stories {
-  font-size: clamp(48, 8.4vw, 65px);
+main .more h1#more {
+  font-size: 65px;
   margin: 0;
+  margin-bottom: 20px;
 }
 
 main .more #more-list {
