--- a/scss/index.scss
+++ b/scss/index.scss
@@ -33,7 +33,19 @@ div.body {
     
     h1.title {
         font-size: 48px;
-        margin-bottom: 0;
+        margin: 0;
+    }
+    
+    nav {
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 70px;
+        * {
+            color: #000;
+            font-size: 16px;
+        }
     }
 }
 
