--- a/templates/post.ejs
+++ b/templates/post.ejs
@@ -33,7 +33,7 @@
         <div class="body">
             <nav>
                 <a href="/#more">⭠ Back Home</a>
-                <time><%= formateDate(new Date(post.attributes.time))%></time>
+                <time><%= formatDate(new Date(post.attributes.time))%></time>
             </nav>
             <h1 class="title">
                 <%= post.attributes.title %>
