--- a/scss/index.scss
+++ b/scss/index.scss
@@ -36,6 +36,10 @@ div.body {
         margin: 0;
     }
     
+    a {
+        color: #388ceb;
+    }
+    
     nav {
         display: flex;
         flex-flow: row wrap;
