--- a/scss/index.scss
+++ b/scss/index.scss
@@ -101,7 +101,7 @@ p {
 body {
     /* PRISM */
     main code {
-        font-size: 0.8em;
+        font-size: 14px;
         border-radius: 2px;
         color: #671ddf;
         margin: 0 2px;
@@ -126,6 +126,7 @@ body {
     }
 
     .token {
+        font-size: 14px;
         font-family: "Fira Code", "Courier New", "Roboto Mono", Monaco, courier, monospace;
     }
 
@@ -211,7 +212,7 @@ body {
         overflow: inherit;
         padding: 2.2em 5px;
         white-space: inherit;
-        font-size: 0.8em;
+        font-size: 14px;
     }
     main code:after,
     main code:before {
