fix bottom margin on tags

--- a/docs/style/index.css
+++ b/docs/style/index.css
@@ -129,6 +129,7 @@ p.description {
 .tags a.tag {
   --bg: #1d32d325;
   --fg: #1d32d3;
+  display: inline-block;
   color: var(--fg);
   background: var(--bg);
   text-decoration: none;
