--- a/docs/style/index.css
+++ b/docs/style/index.css
@@ -7,7 +7,7 @@ html, body {
 header {
   width: 100vw;
   box-sizing: border-box;
-  padding: 10px 20px;
+  padding: 10px 80px;
 }
 header a {
   font-family: "DM Sans", sans-serif;
@@ -121,6 +121,9 @@ p.description {
 .author .author-name .author-name--description {
   margin: 3px 0;
   font-size: 13px;
+}
+.author .author-description {
+  margin-bottom: 40px;
 }
 
 .tags {
