--- a/scss/index.scss
+++ b/scss/index.scss
@@ -7,7 +7,7 @@ html, body {
 header {
     width: 100vw;
     box-sizing: border-box;
-    padding: 10px 20px;
+    padding: 10px 80px;
     
     a {
         font-family: 'DM Sans', sans-serif;
@@ -128,6 +128,10 @@ p {
             margin: 3px 0;
             font-size: 13px;
         }
+    }
+
+    .author-description {
+        margin-bottom: 40px;
     }
 
     margin-bottom: 40px;
