--- a/docs/style/index.css
+++ b/docs/style/index.css
@@ -142,6 +142,10 @@ p.description {
   border-radius: 5px;
   margin-right: 10px;
   margin-bottom: 10px;
+  transition: 300ms cubic-bezier(0.57, 2.71, 0.63, 0.78);
+}
+.tags a.tag:hover {
+  transform: translateY(-5px);
 }
 
 @media screen and (min-width: 900px) {
