--- a/scss/index.scss
+++ b/scss/index.scss
@@ -154,6 +154,11 @@ p {
         border-radius: 5px;
         margin-right: 10px;
         margin-bottom: 10px;
+        transition: 300ms cubic-bezier(0.57, 2.71, 0.63, 0.78);
+
+        &:hover {
+            transform: translateY(-5px);
+        }
     }
 }
 
