--- a/templates/home.ejs
+++ b/templates/home.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta name="google-site-verification" content="A2dHsE_f_V4tRaiBQkS8qrArNM8ZBstroEGFOJQXCO4" />
+    <meta name="description" content="<%= config.custom.description %>" />
     <% function formatDate(date) { const months = ['January', 'February',
     'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October',
     'November', 'December']; return months[date.getMonth()] + ' ' +
