--- a/docs/style/home.css
+++ b/docs/style/home.css
@@ -13,6 +13,8 @@ header {
   align-items: center;
   justify-content: space-between;
   flex-flow: row wrap;
+  margin: 0 auto;
+  max-width: 1400px;
 }
 header a.headline {
   font-family: "DM Sans", sans-serif;
@@ -45,6 +47,8 @@ main {
   box-sizing: border-box;
   color: #000;
   font-family: "DM Sans", "Roboto", "DM Mono", sans-serif;
+  margin: 0 auto;
+  max-width: 1400px;
 }
 main a.hero-post {
   width: 100%;
