--- a/scss/home.scss
+++ b/scss/home.scss
@@ -14,6 +14,8 @@ header {
   align-items: center;
   justify-content: space-between;
   flex-flow: row wrap;
+  margin: 0 auto;
+  max-width: 1400px;
 
   a.headline {
     font-family: 'DM Sans', sans-serif;
@@ -48,6 +50,8 @@ main {
   box-sizing: border-box;
   color: #000;
   font-family: 'DM Sans', 'Roboto', 'DM Mono', sans-serif;
+  margin: 0 auto;
+  max-width: 1400px;
 
   a.hero-post {
     width: 100%;
